@@ -40,6 +40,23 @@ mod_rivet_la_LIBADD = @TCL_LIBS@ @APXS_LIBS@
 mod_rivet_la_CPPFLAGS = @TCL_INCLUDES@ @APXS_CPPFLAGS@ @APXS_INCLUDES@ @APR_CPPFLAGS@ \
                         @APR_INCLUDES@ -DSTART_TAG='"<?"' -DEND_TAG='"?>"'
 
+# ... and these two.  We want to put the libs in the package path,
+# rather than the standard library location for the system.
+lib_libexecdir = @RIVET_TCL_TARGET@
+lib_libexec_LTLIBRARIES = librivetlib.la
+
+#
+# Rivet Library
+#
+
+librivetlib_la_SOURCES = librivet/rivetList.c librivet/rivetCrypt.c librivet/rivetWWW.c librivet/rivetPkgInit.c
+librivetlib_la_LDFLAGS = @TCL_STUB_LIB_SPEC@ @APXS_LDFLAGS@ @APR_LDFLAGS@ -module -avoid-version
+librivetlib_la_LIBADD  = @APXS_LIBS@
+librivetlib_la_CPPFLAGS = @TCL_INCLUDES@ @APXS_CPPFLAGS@ @APXS_INCLUDES@ @APR_INCLUDES@ @APR_CPPFLAGS@ -DSTART_TAG='"<?"' -DEND_TAG='"?>"' -DUSE_TCL_STUBS 
+
+
+
+
 # Removing libtool .la files from installation
 
 install-data-hook:
